--- a/wui/static/adhocpoc.html
+++ b/wui/static/adhocpoc.html
@@ -156,15 +156,18 @@
             </div>
 
             <div id="student">
+                <a href="#!" style="display:block;">► Vaata kõiki esitusi (4)</a>
+                <h4 style="margin-top: 2.5rem; margin-bottom: 1.5rem; display:inline-block;">Esitus #4</h4>
+                <span style="margin-left:1rem;">(viimane esitus)</span>
                 <p id="submission-info">
                     <span class="subheading">Esitamise aeg: </span>18. märts 2018, 9.15</p>
                 <div id="submission-auto">
-                    <h4>Automaatkontrolli hinnang</h4>
+                    <h4 style="font-size: 2rem;">Automaatne hinnang</h4>
                     <pre class="feedback auto-feedback">Gut :)</pre>
                     <div>Automaatne hinne: <span class="grade-number">42</span>/100</div>
                 </div>
                 <div id="submission-teacher">
-                    <h4>Õpetaja hinnang</h4>
+                    <h4 style="font-size: 2rem;">Õpetaja hinnang</h4>
                     <pre class="feedback">Sehr gut :)</pre>
                     <div>Hinne: <span class="grade-number">66</span>/100</div>
                 </div>
