wui fix add grade wrap style regression

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -122,7 +122,7 @@
 </script>
 
 <script id="tm-teach-exercise-add-grade" type="text/x-handlebars-template">
-    <div id="add-grade-wrap">
+    <div id="add-grade-wrap" class="toggleable-wrap">
         <div class="row">
             <div class="input-field col s8">
                 <textarea id="feedback" class="materialize-textarea"></textarea>
