wui arrow strings are not html entities any more

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -182,7 +182,7 @@
     <div id="assessment-auto" class="assessment"></div>
     <div id="assessment-teacher" class="assessment"></div>
 
-    <a id="add-grade-link" class="toggle-link" href="#!">{{{addGradeLink}}}</a>
+    <a id="add-grade-link" class="toggle-link" href="#!">{{addGradeLink}}</a>
     <div id="add-grade-section"></div>
 
     <div class="editor-wrapper no-cursor">
