EZ-1017 all submissions loading placeholder

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -140,6 +140,13 @@
     </div>
 </script>
 
+<script id="tm-teach-exercise-all-submissions-placeholder" type="text/x-handlebars-template">
+    <div id="all-submissions-wrap" class="toggleable-wrap all-submissions-wrap">
+        <!-- TODO: placeholder -->
+        {{text}}
+    </div>
+</script>
+
 <script id="tm-teach-exercise-all-submissions" type="text/x-handlebars-template">
     <div id="all-submissions-wrap" class="toggleable-wrap all-submissions-wrap">
         <div class="collection divided-collection">
