--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -151,7 +151,7 @@
     <div id="all-submissions-wrap" class="toggleable-wrap all-submissions-wrap">
         <div class="collection divided-collection">
             {{#submissions}}
-            <a class="collection-item sm row bb-wrap" href="#!">
+            <a class="collection-item sm row bb-wrap" href="#!" data-sub-id="{{id}}">
                 <span class="col s2">#{{number}}</span>
                 <span class="col s7" style="text-align: center">{{time}}</span>
                 <span class="col s3 flex" style="justify-content: flex-end; align-items: center">
@@ -181,10 +181,13 @@
     </div>
 </script>
 
-<script id="tm-teach-exercise-student-submission" type="text/x-handlebars-template">
+<script id="tm-teach-exercise-student-submission-all" type="text/x-handlebars-template">
     <a id="all-submissions-link" class="toggle-link" href="#!">{{allSubmissionsLink}}</a>
     <div id="all-submissions-section"></div>
-    <h3 class="submission-title">{{submissionLabel}} #{{submissionCount}}</h3><span class="last-submission-label">{{latestSubmissionLabel}}</span>
+</script>
+
+<script id="tm-teach-exercise-student-submission-sub" type="text/x-handlebars-template">
+    <h3 class="submission-title" data-active-sub="{{id}}">{{submissionLabel}} #{{submissionNo}}</h3><span class="last-submission-label">{{latestSubmissionLabel}}</span>
     <p id="submission-info"><span class="subheading">{{timeLabel}}: </span>{{time}}</p>
     <div id="assessment-auto" class="assessment"></div>
     <div id="assessment-teacher" class="assessment"></div>
@@ -197,6 +200,11 @@
             <textarea id="student-submission">{{solution}}</textarea>
         </form>
     </div>
+</script>
+
+<script id="tm-teach-exercise-student-submission" type="text/x-handlebars-template">
+    <div id="all-submissions-part"></div>
+    <div id="submission-part"></div>
 </script>
 
 <script id="tm-teach-exercise-students" type="text/x-handlebars-template">
