wui adjust colours

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -546,7 +546,7 @@
 </script>
 
 <script id="tm-teach-participants-add" type="text/x-handlebars-template">
-    <div id="add-students-wrap">
+    <div id="add-students-wrap" class="toggleable-wrap">
         <div id="add-students-help">{{addStudentsHelp}}
         </div>
         <div id="new-students-form-wrap" class="row">
