EZ-1017 not-last-submission warning note & go to last submission link

--- a/wui/static/adhocpoc.html
+++ b/wui/static/adhocpoc.html
@@ -216,6 +216,7 @@
                     </div>
                 </div>
                 <h3 class="submission-title">Esitus #4</h3><span class="last-submission-label">(viimane esitus)</span>
+                <div><span class="note warn"><i class="material-icons warn">info_outline</i>See on vana esitus. <a href="#!">Vaata viimast esitust.</a></span></div>
                 <p id="submission-info">
                     <span class="subheading">Esitamise aeg: </span>18. märts 2018, 9.15</p>
                 <div id="submission-auto">
