--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -273,9 +273,9 @@
 </script>
 
 <script id="tm-exercise-crumbs" type="text/x-handlebars-template">
-    <a href="{{coursesHref}}" class="breadcrumb">{{coursesLabel}}</a>
-    <a href="{{courseHref}}" class="breadcrumb">{{courseTitle}}</a>
-    <a class="breadcrumb">{{exerciseTitle}}</a>
+    <a href="{{coursesHref}}" class="breadcrumb truncate">{{coursesLabel}}</a>
+    <a href="{{courseHref}}" class="breadcrumb truncate">{{courseTitle}}</a>
+    <a class="breadcrumb truncate">{{exerciseTitle}}</a>
 </script>
 
 <script id="tm-teach-exercise" type="text/x-handlebars-template">
@@ -354,8 +354,8 @@
 
 <script id="tm-teach-exercises-list" type="text/x-handlebars-template">
     <nav class="crumb-wrap">
-        <a href="{{coursesHref}}" class="breadcrumb">{{courses}}</a>
-        <a class="breadcrumb">{{title}}</a>
+        <a href="{{coursesHref}}" class="breadcrumb truncate">{{courses}}</a>
+        <a class="breadcrumb truncate">{{title}}</a>
     </nav>
     <div class="title-wrap">
         <h3 class="title">{{title}}</h3>
@@ -382,8 +382,8 @@
 
 <script id="tm-stud-exercises-list" type="text/x-handlebars-template">
     <nav class="crumb-wrap">
-        <a href="{{coursesHref}}" class="breadcrumb">{{courses}}</a>
-        <a class="breadcrumb">{{title}}</a>
+        <a href="{{coursesHref}}" class="breadcrumb truncate">{{courses}}</a>
+        <a class="breadcrumb truncate">{{title}}</a>
     </nav>
     <div class="title-wrap">
         <h3 class="title">{{title}}</h3>
@@ -482,9 +482,9 @@
 <script id="tm-teach-participants" type="text/x-handlebars-template">
     <div id="participants-container">
         <nav class="crumb-wrap">
-            <a href="/courses" class="breadcrumb">{{myCoursesLabel}}</a>
-            <a href="{{courseHref}}" class="breadcrumb">{{title}}</a>
-            <a class="breadcrumb">{{participantsLabel}}</a>
+            <a href="/courses" class="breadcrumb truncate">{{myCoursesLabel}}</a>
+            <a href="{{courseHref}}" class="breadcrumb truncate">{{title}}</a>
+            <a class="breadcrumb truncate">{{participantsLabel}}</a>
         </nav>
         <div class="title-wrap">
             <h3 class="title">{{title}}</h3>
