--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -295,7 +295,7 @@
                 <li class="tab"><a class="active" href="#exercise">{{exerciseLabel}}</a></li>
                 <li class="tab"><a href="#testing">{{testingLabel}}</a></li>
                 <li class="tab"><a href="#students">{{studentSubmLabel}}</a></li>
-                <li class="tab"><a id="tab-student" href="#student"></a></li>
+                <li id="tab-student" class="tab display-none"><a href="#student"></a></li>
             </ul>
         </div>
         <div class="card-content">
