EZ-1149 Submissions loading placeholder

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -102,7 +102,7 @@
 
 <script id="tm-loading-placeholders" type="text/x-handlebars-template">
     <div class="collection loading-collection">
-        <div class="loading-item"></div>
+        <div class="loading-item title"></div>
         <div class="loading-item"></div>
         <div class="loading-item"></div>
         <div class="loading-item"></div>
