--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -313,11 +313,44 @@
     </div>
 </script>
 
+<script id="tm-stud-restore-latest-sub-link" type="text/x-handlebars-template">
+    <a href="#!"><i class="material-icons">restore</i></a>
+</script>
+
+<script id="tm-stud-sub-sync-loading" type="text/x-handlebars-template">
+    <div class="preloader-wrapper active">
+        <div class="spinner-layer">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+                <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+    </div>
+</script>
+<script id="tm-stud-sub-sync-done" type="text/x-handlebars-template">
+    <i class="material-icons">cloud_done</i>
+</script>
+<script id="tm-stud-sub-sync-fail" type="text/x-handlebars-template">
+    <i class="material-icons">sync_problem</i>
+</script>
+<script id="tm-stud-sub-sync-unsynced" type="text/x-handlebars-template">
+    <i class="material-icons">more_horiz</i>
+</script>
+
 <script id="tm-stud-exercise-submit" type="text/x-handlebars-template">
     {{#time}}<p id="submission-info"><span class="subheading">{{timeLabel}}:</span>{{time}}</p>{{/time}}
     <div id="assessment-auto" class="assessment"></div>
     <div id="assessment-teacher" class="assessment"></div>
     <div id="submit-editor-wrap" class="editor-wrapper">
+        <div class="editor-top">
+            <div id="restore-latest-sub-btn"></div>
+            <div id="sync-indicator"></div>
+        </div>
         <textarea id="submission">{{solution}}</textarea>
     </div>
     <div class="center">
