EZ-1002 html poc fix fixed row header

--- a/wui/static/gradetablepoc.html
+++ b/wui/static/gradetablepoc.html
@@ -145,7 +145,7 @@
         text-align: center;
     }
     .grade-table-wrap table > tbody > tr > td.student {
-        position: fixed;
+        position: absolute;
         background-color: #fff;
         width: 18rem;
     }
